--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,3 @@
 {
-  "builds": [
-    { "src": "src/main.jsx", "use": "@vercel/node" }
-  ],
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
-  ]
+  "outputDirectory": "dist"
 }
